# cppnow25

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.org
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: overview.md
etc/: Makefile  bbg-footer.el  gcc-flags.cmake  local.bib  my_theme.css
examples/: CMakeLists.txt
include/beman/execution/detail/: completion_signature.hpp  sched_attrs.hpp
optional/: .clang-format  optional-synopsis.hpp  optional.html  optional.org  review_notes1.txt  surround.el
src/: CMakeLists.txt
src/smd/streams/: CMakeLists.txt  callerase.hpp  callerase.t.cpp  either.hpp  either.t.cpp  maybe.cpp  maybe.hpp  maybe.t.cpp  pair.cpp  pair.hpp  pair.t.cpp  stream.hpp  stream.t.cpp
streams/: Makefile  reveal.js  specials.html  specials.org  streams.html  streams.org
streams/code/: .clang-format  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile
streams/code/.github/workflows/: ci.yml
streams/code/cmake/: gcovr.cfg.in
streams/code/etc/: clang-flags.cmake  gcc-flags.cmake
streams/code/examples/: CMakeLists.txt  either.cpp  maybe.cpp  pair.cpp  sender.cpp
streams/code/src/: CMakeLists.txt
streams/code/src/smd/: CMakeLists.txt
streams/code/src/smd/streams/: CMakeLists.txt  boolean.hpp  boolean.t.cpp  callerase.hpp  callerase.t.cpp  either.hpp  either.t.cpp  list.hpp  list.t.cpp  maybe.cpp  maybe.hpp  maybe.t.cpp  pair.cpp  pair.hpp  pair.t.cpp  sender_either.hpp  sender_either.t.cpp  sender_pair.hpp  sender_pair.t.cpp  sender_stream.hpp  sender_stream.t.cpp  stream.cpp  stream.hpp  stream.t.cpp
